# Async_API

./: .env.sample  .gitignore  Makefile  README.md  docker-compose-dev-sample.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
deploy/admin_panel/: Dockerfile
deploy/api/: requirements.txt
etl/: config.py  extractor.py  loader.py  models.py  requirements.txt  state.py  tasks.py  transform.py  utils.py
etl/indexes/: genres.json  movies.json  persons.json
movies_admin/: requirements.txt
movies_admin/config/: settings.py  urls.py
movies_admin/movies/migrations/: 0001_initial.py
nginx/conf.d/: site.conf
sqlite_to_postgres/: load_data.py  sqlite_loader.py
src/: Dockerfile  fastapi.dockerfile  main.py  requirements.txt
src/api/: main.py
src/api/api/v1/: __init__.py  film.py  films.py  genre.py  genres.py  person.py  persons.py
src/api/cache_engine/: dummy.py  general.py  redis.py
src/api/core/: config.py  logger.py
src/api/db/: elastic.py  redis.py
src/api/engines/cache/: dummy.py  general.py  redis.py
src/api/engines/search/: elastic.py
src/api/models/: film.py  general.py  genre.py  person.py
src/api/search/: elastic.py  general.py
src/api/services/: film.py  genre.py  person.py
src/api/v1/: film.py  genre.py  person.py
src/core/: config.py
src/models/: base.py  film.py  genre.py  person.py
src/ps_to_es/: es_utils.py  log_utils.py
src/services/: film.py  genre.py  person.py
tests/functional/: Dockerfile  conftest.py  docker-compose.yml  requirements.txt  settings.py
tests/functional/src/: test_film.py  test_film_search.py  test_genre.py  test_genre_detail.py  test_genre_list.py  test_genre_search.py  test_infrastructure.py  test_person.py  test_person_search.py  test_sample.py
tests/functional/testdata/: film_index.json  genre_index.json  person_index.json
tests/functional/testdata/data_for_indexes/: genres.json  movies.json  persons.json
tests/functional/testdata/expected/: test_film.json  test_films_all.json  test_films_pagination.json  test_films_search.json  test_genre.json  test_genres_list.json  test_genres_search.json  test_genres_search_not_found.json  test_person.json  test_person_by_id.json  test_persons_all.json  test_persons_pagination.json  test_persons_search.json  test_persons_search_not_found.json  test_search_person.json
tests/functional/utils/: es_helper.py  logger.py  redis_helper.py  utils.py  wait_for_es.py  wait_for_redis.py
