[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["Vasilii Safronov <vasi1988@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^1.11.1"
celery = {extras = ["redis"], version = "^5.2.3"}
elasticsearch = {extras = ["async"], version = "^7.16.3"}
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
pymongo = "^4.0.1"
python-dotenv = "^0.19.2"
loguru = "^0.6.0"
Django = "^4.0.2"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"
fastapi = "^0.73.0"
orjson = "^3.6.6"
uvicorn = "^0.17.1"
uvloop = "^0.16.0"
aioredis = "1.3.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
