[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["Vasilii Safronov <vasi1988@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "~=3.8.1"
pydantic = "~=1.9.0"
aioredis = "1.3.1"
elasticsearch = {version = "~=7.9.1", extras = ["async"]}
fastapi = "0.73.0"
orjson = "~=3.6.6"
uvloop = "0.16.0"
elasticsearch-dsl = "7.4.0"
uvicorn = "^0.17.5"
backoff = "^1.11.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "6.1.2"
pytest-asyncio = "0.12.0"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
